Bug 90224 - [SKL/BSW/BDW Bisected]Synmark2_v6 OglBatch6/7 and OglDrvState performance reduced by 8%-24%
Summary: [SKL/BSW/BDW Bisected]Synmark2_v6 OglBatch6/7 and OglDrvState performance red...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-29 05:54 UTC by wendy.wang
Modified: 2017-10-06 14:30 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg file (30.98 KB, text/plain)
2015-04-29 05:54 UTC, wendy.wang
no flags Details
drm/i915/gtt: Allocate va range only if vma is not bound (2.77 KB, patch)
2015-04-29 14:53 UTC, Mika Kuoppala
no flags Details | Splinter Review

Description wendy.wang 2015-04-29 05:54:03 UTC
Created attachment 115426 [details]
dmesg file

==System Environment==
--------------------------
Kernel Regression: YES

Non-working platforms: BDW/BSW/SKL

Used GFX SW Stack:
 Libdrm:		(master)libdrm-2.4.60-34-g0d78b37b1cac304ce5e84d1207f0a43abd29c000
 Mesa:		(master)d5a15a89f081bdd23237b8ba5391a2ebea60468b
 Xserver:		(master)xorg-server-1.17.0-76-gb1029716e41e252f149b82124a149da180607c96
 Xf86_video_intel:		(master)2.99.917-287-g09d8e5e1b3215c0e58c2ce44048458152c523270
 Cairo:		(master)2cf2d8e340a325adb205baf8e4bd64e1d1858008

==kernel==
Bisect from drm-intel-next-queued branch, the first bad commit show as below:
commit 9258811c961879450502f767773227f5c0d79120    71b7e54f71b899db9f8def67a0e976969384e699
Author:     Daniel Vetter <daniel.vetter@ffwll.ch>
AuthorDate: Tue Apr 14 17:35:19 2015 +0200
Commit:     Daniel Vetter <daniel.vetter@ffwll.ch>
CommitDate: Thu Apr 23 21:06:02 2015 +0200

    drm/i915: Don't use atomics for pg_dirty_rings

    It's already protected by the bkl^Wdev->struct_mutex. While at it
    realign some related code.

    Reviewed-by: Mika Kuoppala <mika.kuoppala@intel.com>
    Signed-off-by: Daniel Vetter <daniel.vetter@intel.com>


==Bug detailed description==
BDW Platform, synmark2_6 OglBatch6 performance dropped by 12%, OglBatch7 performance dropped by 22%
SKL platform, synmark2_6 OglBatch6 performance dropped by 21%, OglBatch7 
performance dropped by 24%

==Reproduce steps==
1. cd /usr/local/games/OpenGL/SynMark2
2. ./synmark2 OglBatch6

Dmesg file has been attached.
Comment 1 Eero Tamminen 2015-04-29 13:36:45 UTC
Drop on this day is visible also in other (partly) CPU bound SynMark tests (Multithread, GSCloth), potentially also in GfxBench driver test.  Average performance didn't improve in any of the tests, so it's just a perf regression.
Comment 2 Mika Kuoppala 2015-04-29 14:53:00 UTC
Created attachment 115451 [details] [review]
drm/i915/gtt: Allocate va range only if vma is not bound
Comment 3 Ding Heng 2015-04-30 08:39:56 UTC
(In reply to Mika Kuoppala from comment #2)
> Created attachment 115451 [details] [review] [review]
> drm/i915/gtt: Allocate va range only if vma is not bound

Patch pass on latest nightly kernel.
Comment 4 Jani Nikula 2015-04-30 10:31:43 UTC
Fixed by

commit 75d04a3773ecee617847de963ae4195d6aa74c28
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Tue Apr 28 17:56:17 2015 +0300

    drm/i915/gtt: Allocate va range only if vma is not bound

in drm-intel-next-queued. If the problem persists with that, please reopen.
Comment 5 Ding Heng 2015-05-04 07:46:46 UTC
(In reply to Jani Nikula from comment #4)
> Fixed by
> 
> commit 75d04a3773ecee617847de963ae4195d6aa74c28
> Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
> Date:   Tue Apr 28 17:56:17 2015 +0300
> 
>     drm/i915/gtt: Allocate va range only if vma is not bound
> 
> in drm-intel-next-queued. If the problem persists with that, please reopen.

change this bug status to verified.
Comment 6 Vincent Legoll 2015-07-22 18:19:56 UTC
Hello,

this patch regresses on my G45, bug logged here:
https://bugs.freedesktop.org/show_bug.cgi?id=91133
Comment 7 valtteri.rantala 2015-07-22 18:20:22 UTC
Hi!

I am currently out of office  6.7-3.8. I have very limited access to mail during that time.
In please contact : Tomi Sarvela in Performance Benchmark System related question, Martin Peres and Eero Tamminen with performance related questions or my manager Jani Saarinen.
Comment 8 valtteri.rantala 2015-07-22 18:25:59 UTC
Hi!

I am currently out of office  6.7-3.8. I have very limited access to mail during that time.
In please contact : Tomi Sarvela in Performance Benchmark System related question, Martin Peres and Eero Tamminen with performance related questions or my manager Jani Saarinen.
Comment 9 Elizabeth 2017-10-06 14:30:19 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.